# python_django_piscine

./: README.md
day_00/ex00/: myawesomescript.sh
day_00/ex01/: cv.html
day_00/ex02/: form.html
day_00/ex03/: copy.html
day_00/ex04/: snippets.html
day_00/ex05/: index.html
day_01/ex00/: var.py
day_01/ex01/: numbers.py
day_01/ex02/: var_to_dict.py
day_01/ex03/: capital_city.py
day_01/ex04/: state.py
day_01/ex05/: all_in.py
day_01/ex06/: my_sort.py
day_02/ex00/: file.html  myCV.template  render.py  settings.py
day_02/ex01/: intern.py
day_02/ex02/: beverages.py
day_02/ex03/: beverages.py  machine.py
day_02/ex04/: elem.py
day_02/ex05/: elem.py  elements.py
day_03/ex00/: geohashing.py
day_03/ex01/: my_program.py  my_script.sh
day_03/ex02/: request_wikipedia.py  requirement.txt
day_03/ex03/: requirement.txt  roads_to_philosophy.py
day_03/ex04/: my_script.sh  requirement.txt
day_03/ex05/: my_script.sh
day_04/: my_script.sh  requirement.txt
day_04/d04/: db.sqlite3
day_05/: requirement.txt
day_05/d05/: settings.py  urls.py
day_06/: my_script.sh  requirement.txt
day_07/: my_script.sh  requirements.txt
day_08/: my_script.sh  requirements.txt
day_08/pic_uploader/: MANIFEST.in  README.rst  db.sqlite3  setup.cfg
day_08/pic_uploader/app/: forms.py  models.py  urls.py  views.py
day_08/pic_uploader/app/migrations/: 0001_initial.py  0002_rename_picuploadview_uploadimage.py
day_08/pic_uploader/app/templates/app/: base.html  index.html
day_08/pic_uploader/pic_uploader/: asgi.py  settings.py  urls.py  wsgi.py
(+82 files in other folders)
