[metadata]
name = ImageUpload
version = 0.5
long_description = file: README.txt
author = prranges
author_email = prranges@student.21-school.ru

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2
    django-bootstrap3 >= 15.0.0
    Pillow >= 8.3.0